--- a/nosotros.html
+++ b/nosotros.html
@@ -3,14 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="El lugar donde mimamos a tu mascota. Los que hacemos Amigos Peludos hace más de 30 años que nos dedicados al cuidado de las mascotas.">
-	<meta name="keywords" content="perros, gatos, veterinaria, peluquería, alimentos, accesorios, envíos, tarjetas, promociones, descuentos">
-	<link rel="icon" href="images/favicon.ico" type="image/ico"/>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos_compilados.css">
-	<title>Pet-shop "Amigos Peludos". Un lugar relajante y cómodo para nuestros amiguitos de cuatro patas</title>
+	<title>Pet-shop "Amigos Peludos"</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg m-auto navbar-light bg-light">
@@ -43,117 +39,146 @@
 			</div>
 		</div>
 	</nav>
-	<main>
-		<section>
-			<div class="container header_servicios">
-				<div class="card bg-info">
-					<div class="card-body">Quiénes somos</div>
+	<div class="container header_servicios">
+		<div class="card bg-info">
+			<div class="card-body">Quiénes somos</div>
+	  	</div>
+	</div>
+	<div class="contenidoPrincipal mt-5">
+        <img src="images/zona-de-venta.jpg" alt="local de veterinaria">
+    </div>
+	<div class="container header_servicios">
+		<div class="card mt-5">
+			<div class="nosotros card-body">
+				<p> Amigos Peludos es la primera y única tienda del país especializada en productos y servicios para mascotas. Te damos una experiencia diferente de compra, ofreciendo productos y servicios de alta calidad que cumplen con las necesidades de las mascotas y la satisfacción de sus dueños.</p>
+				<p>En Amigos Peludos reconocemos a las mascotas como un miembro más de la familia, a las que debemos cuidar, proteger y brindar el mejor cuidado para que tengan una excelente calidad de vida. Para ello ofrecemos la más amplia variedad en productos alimenticios, accesorios, farmacia, servicios experimentados (veterinaria, peluquería), mascotas para adopción, y mucho más!</p>
+				<p>Podés visitar nuestro local en Vicente López el cual cuenta con modernas y cómodas instalaciones o navegar por nuestro sitio, donde encontrarás el más amplio catálogo de productos, promociones y servicios.</p>
+				<p>Amigos Peludos, donde las mascotas están primero.</p>
+			</div>
+	  	</div>
+	</div>
+	<div class="container">
+		<div class=" mt-5 row row-cols-1 row-cols-md-3 g-4">
+		  	<div class="col">
+				<div class="card bg-info mt-5 h-80">
+					<div class="card-body">
+				  		<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi 		bi-truck" viewBox="0 0 16 16">
+					 	 <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
+				  		</svg>
+				  		<h5 class="card-title">ENVÍOS SIN CARGO</h5>
+				  		<p class="card-text pb-5">En toda la CABA y el GBA</p>
+					</div>
+				</div>
+		  	</div>
+		  	<div class="col">
+				<div class="card bg-info mt-5 h-80">
+				  	<div class="card-body">
+					  	<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi 		bi-currency-dollar" viewBox="0 0 16 16">
+						<path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
+					  	</svg>
+					 	 <h5 class="card-title ">DESCUENTOS EXTRA</h5>
+					  	<p class="card-text pb-5">Pagando tus compras en efectivo</p>
+				 	</div>
+				</div>
+		  	</div>
+		  	<div class="col">
+				<div class="card bg-info mt-5 h-80">
+			  		<div class="card-body">
+				 		<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi 		bi-credit-card" viewBox="0 0 16 16">
+					 	<path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z"/>
+					  	<path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z"/>
+				  		</svg>
+						<h5 class="card-title">PAGÁ CON TARJETA</h5>
+						<p class="card-text pt-md-4 pt-lg-0 pt-md3 pb-5">En cuotas sin interés</p>
+			 		</div>
+				</div>
+		  	</div>
+		</div>
+	</div>
+	<div class="container footer">
+		<div class="text-center text-lg-start bg-light text-muted">
+			<div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+				<div class=" resumen me-5 d-none d-lg-block">
+					<span>Conectate con nosotros en las redes sociales:</span>
 			  	</div>
-			</div>
-			<div class="contenidoPrincipal mt-5">
-    		    <img src="images/zona-de-venta.jpg" alt="local de veterinaria">
-    		</div>
-			<article>
-				<div class="container header_servicios">
-					<div class="card mt-5">
-						<div class="nosotros card-body">
-							<p> Amigos Peludos es la primera y única tienda del país especializada en productos y servicios para mascotas. Te damos una experiencia diferente de compra, ofreciendo productos y servicios de alta calidad que cumplen con las necesidades de las mascotas y la satisfacción de sus dueños.</p>
-							<p>En Amigos Peludos reconocemos a las mascotas como un miembro más de la familia, a las que debemos cuidar, proteger y brindar el mejor cuidado para que tengan una excelente calidad de vida. Para ello ofrecemos la más amplia variedad en productos alimenticios, accesorios, farmacia, servicios experimentados (veterinaria, peluquería), mascotas para adopción, y mucho más!</p>
-							<p>Podés visitar nuestro local en Vicente López el cual cuenta con modernas y cómodas instalaciones o navegar por nuestro sitio, donde encontrarás el más amplio catálogo de productos, promociones y servicios.</p>
-							<p>Amigos Peludos, donde las mascotas están primero.</p>
-						</div>
-				  	</div>
-				</div>
-			</article>
-		</section>
-		<section>
-			<div class="container">
-				<div class=" mt-5 row row-cols-1 row-cols-md-3 g-4">
-				  	<div class="col">
-						<div class="card bg-info mt-5 h-80">
-							<div class="card-body">
-						  		<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi 		bi-truck" viewBox="0 0 16 16">
-							 	 <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-						  		</svg>
-						  		<h5 class="card-title">ENVÍOS SIN CARGO</h5>
-						  		<p class="card-text pb-5">En toda la CABA y el GBA</p>
-							</div>
-						</div>
-				  	</div>
-				  	<div class="col">
-						<div class="card bg-info mt-5 h-80">
-						  	<div class="card-body">
-							  	<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi 		bi-currency-dollar" viewBox="0 0 16 16">
-								<path d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718H4zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73l.348.086z"/>
-							  	</svg>
-							 	 <h5 class="card-title ">DESCUENTOS EXTRA</h5>
-							  	<p class="card-text pb-5">Pagando tus compras en efectivo</p>
-						 	</div>
-						</div>
-				  	</div>
-				  	<div class="col">
-						<div class="card bg-info mt-5 h-80">
-					  		<div class="card-body">
-						 		<svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" class="bi 		bi-credit-card" viewBox="0 0 16 16">
-							 	<path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z"/>
-							  	<path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z"/>
-						  		</svg>
-								<h5 class="card-title">PAGÁ CON TARJETA</h5>
-								<p class="card-text pt-md-4 pt-lg-0 pt-md3 pb-5">En cuotas sin interés</p>
-					 		</div>
-						</div>
-				  	</div>
+			  	<div>
+					<a href="https://www.facebook.com/" target="_blank" class="me-4 text-reset"><img src="images/facebook.png" alt="logo de facebook"></a>
+					<a href="https://www.instagram.com/" target="_blank" class="me-4 text-reset"><img src="images/instagram.png" alt="logo de instagram"></a>
+					<a href="https://twitter.com/" target="_blank" class="me-4 text-reset"><img src="images/twitter.png" alt="logo de twitter"></a>
 				</div>
 			</div>
-		</section>
-	</main>
-	<footer>
-		<div class="container footer">
-			<div class="text-center text-lg-start bg-light text-muted">
-				<div class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-					<div class=" resumen me-5 d-none d-lg-block">
-						<span>Conectate con nosotros en las redes sociales:</span>
-				  	</div>
-				  	<div>
-						<a href="https://www.facebook.com/" target="_blank" class="me-4 text-reset"><img src="images/facebook.png" alt="logo de facebook"></a>
-						<a href="https://www.instagram.com/" target="_blank" class="me-4 text-reset"><img src="images/instagram.png" alt="logo de instagram"></a>
-						<a href="https://twitter.com/" target="_blank" class="me-4 text-reset"><img src="images/twitter.png" alt="logo de twitter"></a>
+			<div>
+			  	<div class="container text-center text-md-start mt-5">
+					<div class="mision row mt-3">
+				  		<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+							<h6 class="mb-4">"Amigos Peludos"</h6>
+							<p> Nos encontramos en zona norte. Somos el único lugar dónde mimamos a tu mascota siendo nuestra mayor alegría que ellas sean felices y estén cómodas y contentas. </p>
+				  		</div>
+				  		<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+							<h6 class="mb-4">Productos</h6>
+							<p><a href="tienda.html">Royal Canin</a></p>
+							<p><a href="tienda.html">Proplan</a></p>
+							<p><a href="tienda.html">Vital Can</a></p>
+				  		</div>
+						<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+							<h6 class="mb-4">Links</h6>
+							<p><a href="servicios.html">Servicios</a></p>
+							<p><a href="tienda.html">Tienda</a></p>
+							<p><a href="nosotros.html">Nosotros</a></p>
+				  		</div>
+				  		<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+							<h6 class="mb-4">Contacto</h6>
+							<p><a href="contacto.html">Italia 490 - Vicente López</p>
+							<p><a href="mailto:info@petshopamigospeludos.com">info@petshopamigospeludos.com</a></p>
+							<p><a href="tel:0810-555-5555">0810-555-5555</a></p>
+				  		</div>
 					</div>
 				</div>
-				<div>
-				  	<div class="container text-center text-md-start mt-5">
-						<div class="mision row mt-3">
-					  		<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-								<h6 class="mb-4">"Amigos Peludos"</h6>
-								<p> Nos encontramos en zona norte. Somos el único lugar dónde mimamos a tu mascota siendo nuestra mayor alegría que ellas sean felices y estén cómodas y contentas. </p>
-					  		</div>
-					  		<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-								<h6 class="mb-4">Productos</h6>
-								<p><a href="tienda.html">Royal Canin</a></p>
-								<p><a href="tienda.html">Proplan</a></p>
-								<p><a href="tienda.html">Vital Can</a></p>
-					  		</div>
-							<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-								<h6 class="mb-4">Links</h6>
-								<p><a href="servicios.html">Servicios</a></p>
-								<p><a href="tienda.html">Tienda</a></p>
-								<p><a href="nosotros.html">Nosotros</a></p>
-					  		</div>
-					  		<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-								<h6 class="mb-4">Contacto</h6>
-								<p><a href="contacto.html">Italia 490 - Vicente López</p>
-								<p><a href="mailto:info@petshopamigospeludos.com">info@petshopamigospeludos.com</a></p>
-								<p><a href="tel:0810-555-5555">0810-555-5555</a></p>
-					  		</div>
-						</div>
-					</div>
-				</div>
-				<div class="pie text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">© Pet-Shop Amigos Peludos</div>
 			</div>
+			<div class="pie text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">© Pet-Shop Amigos Peludos</div>
 		</div>
-		<div class="icono">
-			<a href="https://api.whatsapp.com/" target="_blank"><img src="images/icono.png" alt="icono de whatsapp"></a>
-		</div>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	<div class="icono">
+		<a href="https://api.whatsapp.com/" target="_blank"><img src="images/icono.png" alt="icono de whatsapp"></a>
+	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+	
 </body>
 </html>
