--- a/nosotros.html
+++ b/nosotros.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="El lugar donde mimamos a tu mascota. Los que hacemos Amigos Peludos hace mas de 30 años que nos dedicamos al cuidado de las mascotas">
+	<meta name="keywords" content="perros, gatos, veterinaria, peluquería, alimentos, accesorios, envíos, tarjetas, promociones,descuentos">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos_compilados.css">
-	<title>Pet-shop "Amigos Peludos"</title>
+	<title>Pet-shop "Amigos Peludos". Un lugar relajante y cómodo para nuestros amiguitos de cuatro patas</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg m-auto navbar-light bg-light">
