--- a/tienda.html
+++ b/tienda.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Amigos Peludos es el lugar donde mimamos a tu mascota. Un lugar donde comprar los mejores productos divertidos y de calidad para nuestros amiguitos de cuatro patas. Comprá online productos para perros y gatos a precios accesibles. Trabajamos con todas las marcas líderes del mercado como Proplan, Royal Canin, Vitalcan, entre otras. Hacé tu pedido y pagalo online.">
+	<meta name="keywords" content="perros, gatos, veterinaria, peluquería, alimentos, accesorios, envíos, tarjetas, promociones,descuentos">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos_compilados.css">
-	<title>Pet-shop "Amigos Peludos"</title>
+	<title>Pet-shop "Amigos Peludos". Un lugar donde comprar los mejores divertidos y de calidad para nuestrso amiguitos de cuatro patas.</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg m-auto navbar-light bg-light">
